fixes float img and wrap text by removing display: flex

--- a/movie.css
+++ b/movie.css
@@ -78,3 +78,31 @@ body {
 	font-size: 8pt;
 	color: white;
 }
+
+.reviews-container {
+	display: flex;
+}
+
+.review-column {
+	width: 47%;
+	display: flex;
+	flex-direction: column;
+}
+
+.review {
+	background-color: #E1D697;
+	border: 2px solid gray;
+	padding: 8px;
+}
+
+.review-icon {
+	float: left;
+	width: 25px;
+	height: 25px;
+	margin-right: 5px;
+}
+
+.review-text {
+	font-size: 8pt;
+	font-weight: bold;
+}
